[gd_scene load_steps=5 format=3 uid="uid://crjrteng800a8"]

[ext_resource type="Script" path="res://scenes/agieditor/agieditor.gd" id="1_lcw7k"]
[ext_resource type="PackedScene" uid="uid://bifqdo5mrvyxg" path="res://scenes/agieditor/view/view_viewer.tscn" id="2_5hgi5"]
[ext_resource type="PackedScene" uid="uid://c7x1li6aoclli" path="res://scenes/agieditor/picture/picture_viewer.tscn" id="3_2moiq"]
[ext_resource type="Script" path="res://scenes/agieditor/logic/logic_viewer.gd" id="4_2db2n"]

[node name="agieditor" type="Node2D"]
script = ExtResource("1_lcw7k")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ui" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ui"]
layout_mode = 0
offset_left = 20.0
offset_top = 16.0
offset_right = 143.0
offset_bottom = 56.0

[node name="ButtonLoadGameDir" type="Button" parent="CanvasLayer/ui/VBoxContainer"]
layout_mode = 2
text = "Load Game Dir"

[node name="FileDialogGameDir" type="FileDialog" parent="CanvasLayer/ui"]
title = "Open a Directory"
size = Vector2i(500, 500)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/ui"]
layout_mode = 0
offset_left = 29.0
offset_top = 82.0
offset_right = 69.0
offset_bottom = 122.0

[node name="ButtonView" type="Button" parent="CanvasLayer/ui/VBoxContainer2"]
layout_mode = 2
text = "View"

[node name="ButtonPicture" type="Button" parent="CanvasLayer/ui/VBoxContainer2"]
layout_mode = 2
text = "Picture"

[node name="ButtonLogic" type="Button" parent="CanvasLayer/ui/VBoxContainer2"]
layout_mode = 2
text = "Logic"

[node name="Tools" type="CenterContainer" parent="CanvasLayer/ui"]
layout_mode = 1
offset_left = 139.0
offset_top = 94.0
offset_right = 139.0
offset_bottom = 94.0
mouse_filter = 2

[node name="view_viewer" parent="CanvasLayer/ui/Tools" instance=ExtResource("2_5hgi5")]
visible = false
layout_mode = 2

[node name="picture_viewer" parent="CanvasLayer/ui/Tools" instance=ExtResource("3_2moiq")]
visible = false
layout_mode = 2

[node name="logic_viewer" type="Control" parent="CanvasLayer/ui/Tools"]
layout_mode = 2
script = ExtResource("4_2db2n")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/ui/Tools/logic_viewer"]
layout_mode = 0
offset_right = 669.0
offset_bottom = 441.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ui/Tools/logic_viewer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/ui/Tools/logic_viewer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/ui/Tools/logic_viewer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Logic:"

[node name="OptionButtonLogicList" type="OptionButton" parent="CanvasLayer/ui/Tools/logic_viewer/PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[connection signal="pressed" from="CanvasLayer/ui/VBoxContainer/ButtonLoadGameDir" to="." method="_on_button_load_game_dir_pressed"]
[connection signal="dir_selected" from="CanvasLayer/ui/FileDialogGameDir" to="." method="_on_file_dialog_game_dir_dir_selected"]
[connection signal="pressed" from="CanvasLayer/ui/VBoxContainer2/ButtonView" to="." method="_on_button_view_pressed"]
[connection signal="pressed" from="CanvasLayer/ui/VBoxContainer2/ButtonPicture" to="." method="_on_button_picture_pressed"]
[connection signal="pressed" from="CanvasLayer/ui/VBoxContainer2/ButtonLogic" to="." method="_on_button_logic_pressed"]
[connection signal="item_selected" from="CanvasLayer/ui/Tools/logic_viewer/PanelContainer/VBoxContainer/HBoxContainer/OptionButtonLogicList" to="CanvasLayer/ui/Tools/logic_viewer" method="_on_option_button_logic_list_item_selected"]
